--- a/research_notes/index.html
+++ b/research_notes/index.html
@@ -339,8 +339,8 @@ kbd {
 
 
 <!--CONTENTS-->
-<h4 id="toc_3">14. 2021/05/23 Dynamics simulations of self-assembly of nanoparticles (Tutorial VI: Visualising simulation data)
-  <a href="notes/20210523_Dynamics simulations of self-assembly of nanoparticles (Tutorial VI_Visualising simulation data).html">more...</a></h4>
+<h4 id="toc_3">14. 2021/05/23 Dynamics simulations of self-assembly of nanoparticles (Tutorial VI: Visualizing simulation data)
+  <a href="notes/20210523_Dynamics simulations of self-assembly of nanoparticles (Tutorial VI_Visualizing simulation data).html">more...</a></h4>
 <h4 id="toc_3">13. 2021/05/02 Dynamics simulations of self-assembly of nanoparticles (Tutorial V: Creating LAMMPS script)
   <a href="notes/20210502_Dynamics simulations of self-assembly of nanoparticles (Tutorial V_Creating LAMMPS script).html">more...</a></h4>
 <h4 id="toc_3">12. 2021/04/25 Dynamics simulations of self-assembly of nanoparticles (Tutorial IV: Creating LAMMPS data file)
