--- a/research_notes/notes/20210523_Dynamics simulations of self-assembly of nanoparticles (Tutorial VI_Visualizing simulation data).html
+++ b/research_notes/notes/20210523_Dynamics simulations of self-assembly of nanoparticles (Tutorial VI_Visualizing simulation data).html
@@ -5,7 +5,7 @@
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-<title>20210523_Dynamics simulations of self-assembly of nanoparticles (Tutorial VI_Visualising simulation data)</title>
+<title>20210523_Dynamics simulations of self-assembly of nanoparticles (Tutorial VI_Visualizing simulation data)</title>
 
 
 <style type="text/css">
@@ -333,7 +333,7 @@ kbd {
 
 <h4 id="toc_0"><a href="../../index.html">HOME</a> <a href="../index.html">CONTENTS</a></h4>
 
-<h2 id="toc_1">Dynamics simulations of self-assembly of nanoparticles (Tutorial VI: Visualising simulation data)</h2>
+<h2 id="toc_1">Dynamics simulations of self-assembly of nanoparticles (Tutorial VI: Visualizing simulation data)</h2>
 
 <p><em>by Yawei Liu  @ Sydney, Australia 2021/05/23</em></p>
 
@@ -348,7 +348,7 @@ kbd {
 49999000   249995   1.020668   2.770042   2.974512   2.774922   18.999537   19.366164   19.826702   1080
 50000000   250000   0.979795   2.729397   2.316430   3.073195   18.991180   19.372467   19.842262   1080</code></pre></div>
 
-<p>I renamed the two <code>result_thermo.dat</code> files in the compression and expansion simulations as <code>result_thermo_compression.dat</code> and <code>result_thermo_expansion.dat</code>, respectively. This is a Python script to visualise the relation between the pressure and the volume fraction based on the data produced by the simulations:</p>
+<p>I renamed the two <code>result_thermo.dat</code> files in the compression and expansion simulations as <code>result_thermo_compression.dat</code> and <code>result_thermo_expansion.dat</code>, respectively. This is a Python script to visualize the relation between the pressure and the volume fraction based on the data produced by the simulations:</p>
 
 <div><pre><code class="language-none">Pmin = 1.0
 Pmax = 3.0
