--- a/research_notes/index.html
+++ b/research_notes/index.html
@@ -339,6 +339,8 @@ kbd {
 
 
 <!--CONTENTS-->
+<h4 id="toc_3">15. 2021/05/30 Dynamics simulations of self-assembly of nanoparticles (Tutorial VII: Visualizing simulation system)
+  <a href="notes/20210530_Dynamics simulations of self-assembly of nanoparticles (Tutorial VII_Visualizing simulation system).html">more...</a></h4>
 <h4 id="toc_3">14. 2021/05/23 Dynamics simulations of self-assembly of nanoparticles (Tutorial VI: Visualizing simulation data)
   <a href="notes/20210523_Dynamics simulations of self-assembly of nanoparticles (Tutorial VI_Visualizing simulation data).html">more...</a></h4>
 <h4 id="toc_3">13. 2021/05/02 Dynamics simulations of self-assembly of nanoparticles (Tutorial V: Creating LAMMPS script)
