--- a/research_notes/notes/20210530_Dynamics simulations of self-assembly of nanoparticles (Tutorial VII_Visualizing simulation system).html
+++ b/research_notes/notes/20210530_Dynamics simulations of self-assembly of nanoparticles (Tutorial VII_Visualizing simulation system).html
@@ -5,7 +5,7 @@
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-<title>20210530_Dynamics simulations of self-assembly of nanoparticles (Tutorial VI_Visualizing simulation system)</title>
+<title>20210530_Dynamics simulations of self-assembly of nanoparticles (Tutorial VII_Visualizing simulation system)</title>
 
 
 <style type="text/css">
@@ -554,7 +554,7 @@ Volume fraction:  0.449888</code></pre></div>
 <p>Running <code>_plato_sphere_frame(snap,zoom=0.5,size=(30,30)).show()</code>, we obtain
 <img src="images/assembly_nanoparticles/snapshot_nematic.png" alt=" " height="300" /></p>
 
-<p>Obviously, it is a nematic phase. This is consistent with the equation of state we plotted last week: at volume fraction of \(\sim0.45\), the system is in nematic phase.</p>
+<p>Obviously, it is a nematic phase. This is consistent with the equation of state we plotted last week: at volume fraction of \(\sim0.45\), the system is in nematic phase[1].</p>
 
 <h3 id="toc_2">References</h3>
 
