--- a/index.html
+++ b/index.html
@@ -32,10 +32,6 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
-								<li><a href="generic.html">Generic</a></li>
-								<li><a href="elements.html">Elements</a></li>
-								<li><a href="#">Log In</a></li>
-								<li><a href="#">Sign Up</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
@@ -61,20 +57,30 @@
 
 							<h3>研究方向 Research interests</h3>
 							<p>
-								开发和应用多尺度分析和计算方法（以分子模拟为主），从分子和纳米级的角度来研究软物质，即通过相对较弱的非共价相互作用聚集在一起的物质，如液体、液晶、聚合物、凝胶、胶体、表面活性剂、膜、生物材料（如DNA、蛋白质、脂质等）以及它们的复合物质。特别关注软物质体系表界面微观结构对流体/颗粒行为的影响和调控，主要研究课题包括 i) 纳米气泡：稳定性、成核/生长等演化行为；ii) 纳米流动：外场(电场/浓度场/温度场)驱动流体/颗粒运动，膜材料纳微孔道内组分传输与分离；iii) 纳米组装：溶液中分子/纳米颗粒的相互作用和组装结构与过程。这些研究可以促进我们对物质组成-结构-性质-功能的基本理解，支撑新健康、环境、能源等领域型材料和工艺的设计和开发。为了激发这项工作并激发对真实系统的研究，我们经常与实验研究者密切合作。<br/>
+								我们开发和应用多尺度分析和计算方法（以分子模拟为主），从分子和纳米级的角度来研究软物质，即通过相对较弱的非共价相互作用聚集在一起的物质，如液体、液晶、聚合物、凝胶、胶体、表面活性剂、膜、生物材料（如DNA、蛋白质、脂质等）以及它们的复合物质。这些研究可以促进我们对物质组成-结构-性质-功能的基本理解，支撑新健康、环境、能源等领域型材料和工艺的设计和开发。为了激发这些工作并支撑真实系统的研究，我们经常与实验研究者密切合作。<br/>
+								我们特别关注软物质体系表界面微观结构对流体/颗粒行为的影响和调控，主要研究课题包括：<br/>
+								i) 纳米气泡：稳定性、成核/生长、迁移、融合等演化行为。<br/>
+								ii) 纳米流动：外场(电场/浓度场/温度场)驱动流体/颗粒运动，多孔材料纳微孔道内传输与分离。<br/>
+								iii) 纳米组装：溶液中分子/纳米颗粒的相互作用和组装结构与过程<br/>
 							</p>
 							<p>
-								Research in our group is focused on developing and applying multiscale analytical and computational methods () to study soft matter - i.e. substances held together 
+								Research in our group is focused on developing and applying multiscale analytical and computational methods (mainly molecular simulations) to study soft matter - i.e. substances held together 
 								by relatively weak non-covalent interactions, such as liquids, liquid crystals, polymers, gels, colloids, 
-								surfactants, membranes, biomaterials (e.g. DNAs, proteins and lipids) and their composites - from a molecular and nanoscale perspective. Such studies are relevant for our fundamental understanding of matter and the design of novel materials with applications in 
-								areas including health and renewable energy. To inspire this work and to stimulate research in real systems we often work closely with experimentalists.<br />
-
-								See our outcomes at <a href=https://scholar.google.com.au/citations?user=Bh8mdUcAAAAJ&hl=en>Google Scholar</a> and 
-								<a href=https://www.researchgate.net/profile/Yawei_Liu3>Researchgate</a>.<br/>
-
-								We are developing MolSimulX (molecular simulation tools&tutorials) at <a href=https://gitee.com/yliu3803/MolSimulX>Gitee</a> and <a href=https://github.com/yaweiliu/MolSimulX>Github</a>.
+								surfactants, membranes, biomaterials (e.g. DNAs, proteins and lipids) and their composites - from a molecular and nanoscale perspective.Such studies are relevant for our fundamental understanding of matter and the design of novel materials with applications in areas including health, environment, and energy. To inspire this work and to support research in real systems we often work closely with experimentalists.<br/>
+								We are very interested in how the surface/interface microscopic structures influence and regulate the behaviours of fluids and particles in soft matter systems. Main reserach topics includes:<br/> 
+								i) Nano-bubbles: evolution behaviors such as stability, nucleation/growth, coalescence, etc.<br/>
+								ii) Nano-fluidics: fluid/particle motions driven by external fields, transport and separation in porous materials.<br/>
+								iii) Nano-assembly: Molecule/Particle interactions and their assembly behaviours in solutions.<br/>
 							</p>
 
+							<p>
+								<a href=https://scholar.google.com.au/citations?user=Bh8mdUcAAAAJ&hl=en>Google Scholar</a> 
+								<a href=https://www.researchgate.net/profile/Yawei_Liu3>Researchgate</a> <br/>
+								
+								我们正在开发MolSimulX（分子模拟工具和教程），见<a href=https://gitee.com/yliu3803/MolSimulX>Gitee</a> and <a href=https://github.com/yaweiliu/MolSimulX>Github</a>。<br/>
+
+								We are developing MolSimulX (molecular simulation tools&tutorials) at <a href=https://gitee.com/yliu3803/MolSimulX>Gitee</a> and <a href=https://github.com/yaweiliu/MolSimulX>Github</a>.<br/>
+							</p>
 						</div>
 					</section>
 
