--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 							</p>
 							<p>
 								I am an Associate Professor at the Institute of Process Engineering of Chinese Academy of Sciences (IPE, CAS) since 2021.11. Prior to this I was a Postdoc researcher at the University of Sydney during 2017.9-2021.8 (<a href=https://www.sydney.edu.au/science/about/our-people/academic-staff/asaph-widmer-cooper.html>A/Prof. Asaph Widmer-Cooper's group</a>), a visiting PhD student at the University of Cambridge during 2014.11-2016.11 (<a href=https://www.ch.cam.ac.uk/person/df246>Prof. Daan Frenkel's group</a>), a Master/PhD student at Beijing University of Chemical Technology (BUCT) during 2010.9-2017.7 (<a href=https://www.researchgate.net/profile/Xianren-Zhang>Prof. Xianren Zhang's group</a>), and a undergraduate student at BUCT during 2006.9-2010.6.
-								<br />
-							</p>
+								<br/>
+							</p>	
 
 							<h3>研究方向 Research interests</h3>
 							<p>
@@ -70,17 +70,20 @@
 								We are very interested in how the surface/interface microscopic structures influence and regulate the behaviours of fluids and particles in soft matter systems. Main reserach topics includes:<br/> 
 								i) Nano-bubbles: evolution behaviors such as stability, nucleation/growth, coalescence, etc.<br/>
 								ii) Nano-fluidics: fluid/particle motions driven by external fields, transport and separation in porous materials.<br/>
-								iii) Nano-assembly: Molecule/Particle interactions and their assembly behaviours in solutions.<br/>
+								iii) Nano-assembly: Molecule/Nanoparticle interactions and their assembly behaviours in solutions.<br/>
+							</p>
+
+							<p>
+								我们正在开发MolSimulX（分子模拟工具和教程），见<a href=https://gitee.com/yliu3803/MolSimulX>Gitee</a> and <a href=https://github.com/yaweiliu/MolSimulX>Github</a>。<br/>
+
+								We are developing MolSimulX (molecular simulation tools&tutorials) at <a href=https://gitee.com/yliu3803/MolSimulX>Gitee</a> and <a href=https://github.com/yaweiliu/MolSimulX>Github</a>.<br/>
 							</p>
 
 							<p>
 								<a href=https://scholar.google.com.au/citations?user=Bh8mdUcAAAAJ&hl=en>Google Scholar</a> 
 								<a href=https://www.researchgate.net/profile/Yawei_Liu3>Researchgate</a> <br/>
-								
-								我们正在开发MolSimulX（分子模拟工具和教程），见<a href=https://gitee.com/yliu3803/MolSimulX>Gitee</a> and <a href=https://github.com/yaweiliu/MolSimulX>Github</a>。<br/>
-
-								We are developing MolSimulX (molecular simulation tools&tutorials) at <a href=https://gitee.com/yliu3803/MolSimulX>Gitee</a> and <a href=https://github.com/yaweiliu/MolSimulX>Github</a>.<br/>
 							</p>
+
 						</div>
 					</section>
 
@@ -149,9 +152,16 @@
 											<a href="#" class="special">Learn more</a>
 										</article>
 
+										<article>
+											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
+											<h3 class="major">Nisl placerat</h3>
+											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<a href="#" class="special">Learn more</a>
+										</article>
+
 									</section>
 									<ul class="actions">
-										<li><a href="#" class="button">Browse All</a></li>
+										<li><a href="#" class="button">Browse More</a></li>
 									</ul>
 								</div>
 							</section>
@@ -163,40 +173,20 @@
 					<section id="footer">
 						<div class="inner">
 							<h2 class="major">Get in touch</h2>
-							<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">Email</label>
-										<input type="email" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="4"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form>
 							<ul class="contact">
-								<li class="icon solid fa-home">
-									Untitled Inc<br />
-									1234 Somewhere Road Suite #2894<br />
-									Nashville, TN 00000-0000
+								<li class="icon solid fa-envelope"><a href="#">ywliu@ipe.ac.cn</a></li>
+								<li class="icon solid fa-address-card">
+									北京市海淀区中关村北二街1号过程大厦B-1408<br/>
+									Rm 1408, Buiding B, No. 1, North 2nd Street of Zhongguancun, Haidian District, Beijing, 100190, China
 								</li>
-								<li class="icon solid fa-phone">(000) 000-0000</li>
-								<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-								<li class="icon brands fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
-								<li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled-tld</a></li>
-								<li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
 							</ul>
+							
 							<ul class="copyright">
-								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>
+									<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+            						<span id="busuanzi_container_site_pv">View<span id="busuanzi_value_site_pv">   </span>times</span>
+								</li>
+								<li>&copy; All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
