--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Solid State</a></h1>
+						<h1><a href="#banner">TOP</a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -32,6 +32,8 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
+								<li><a href="index.html">Outcomes</a></li>
+								<li><a href="index.html">Group</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
@@ -108,7 +110,7 @@
 									<a href="#" class="image"><img src="images/nanofluidics.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Nano-fluidics</h2>
-										<p>Phoretic transport represents the motion of colloids/molecules in fluids and the fluid flow near solid surfaces induced by a electric field, a concentration gradient or  a temperature gradient (i.e. electro-/diffusio-/thermo-phoresis and electro-/diffusio-/thermo-osmosis). The phoretic transport processes offer important advantages in fields as diverse as micro-/nano-fluidics, colloid science and separations because of the controllable processes may be achieved through surface structure and chemistry.</p>
+										<p>The field of nanofluidics explores the transport of fluids and ionic species at the nanometric scales. Interfaces often paly a crucial role at nanoscales. We are intersted in a phenomenon called phoretic transport, which represents the motion of colloids/molecules in fluids and the fluid flow near solid surfaces driven by some interfacial forces due to a electric field, a concentration gradient or  a temperature gradient (i.e. electro-/diffusio-/thermo-phoresis and electro-/diffusio-/thermo-osmosis). The phoretic transport processes offer important advantages in fields as diverse as micro-/nano-fluidics, colloid science and separations because of the controllable processes may be achieved through surface structure and chemistry.</p>
 										<a href="#" class="special">Learn more</a>
 									</div>
 								</div>
@@ -165,7 +167,6 @@
 									</ul>
 								</div>
 							</section>
-
 
 					</section>
 
