--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 							<h3>研究方向 Research interests</h3>
 							<p>
-								我们开发和应用多尺度分析和计算方法（以分子模拟为主），从分子和纳米级的角度来研究软物质，即通过相对较弱的非共价相互作用聚集在一起的物质，如液体、液晶、聚合物、凝胶、胶体、表面活性剂、膜、生物材料（如DNA、蛋白质、脂质等）以及它们的复合物质。这些研究可以促进我们对物质组成-结构-性质-功能的基本理解，支撑新健康、环境、能源等领域型材料和工艺的设计和开发。为了激发这些工作并支撑真实系统的研究，我们经常与实验研究者密切合作。<br/>
+								我们开发和应用多尺度分析和计算方法（以分子模拟为主），从分子水平和纳米尺度的角度来研究软物质，即通过相对较弱的非共价相互作用聚集在一起的物质，如液体、液晶、聚合物、凝胶、胶体、表面活性剂、膜、生物材料（如DNA、蛋白质、脂质等）以及它们的复合物质。这些研究可以促进我们对物质组成-结构-性质-功能的基本理解，支撑新健康、环境、能源等领域型材料和工艺的设计和开发。为了激发这些工作并支撑真实系统的研究，我们经常与实验研究者密切合作。<br/>
 								我们特别关注软物质体系表界面微观结构对流体/颗粒行为的影响和调控，主要研究课题包括：<br/>
 								i) 纳米气泡：稳定性、成核/生长、迁移、融合等演化行为。<br/>
 								ii) 纳米流动：外场(电场/浓度场/温度场)驱动流体/颗粒运动，多孔材料纳微孔道内传输与分离。<br/>
