--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 						<div class="inner">
 							<h2 class="major">Get in touch</h2>
 							<ul class="contact">
-								<li class="icon solid fa-envelope"><a href="#">ywliu@ipe.ac.cn</a></li>
+								<li class="icon solid fa-envelope"><a href="mailto:ywliu@ipe.ac.cn">ywliu@ipe.ac.cn</a></li>
 								<li class="icon solid fa-address-card">
 									北京市海淀区中关村北二街1号过程大厦B-1408<br/>
 									Rm 1408, Buiding B, No. 1, North 2nd Street of Zhongguancun, Haidian District, Beijing, 100190, China
