--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 							</p>
 
 							<p>
-								我们正在开发MolSimulX（分子模拟工具和教程），见<a href=https://gitee.com/yliu3803/MolSimulX>Gitee</a> and <a href=https://github.com/yaweiliu/MolSimulX>Github</a>。<br/>
+								我们正在开发MolSimulX（分子模拟工具和教程），见<a href=https://gitee.com/yliu3803/MolSimulX>Gitee</a>和<a href=https://github.com/yaweiliu/MolSimulX>Github</a>。<br/>
 
 								We are developing MolSimulX (molecular simulation tools&tutorials) at <a href=https://gitee.com/yliu3803/MolSimulX>Gitee</a> and <a href=https://github.com/yaweiliu/MolSimulX>Github</a>.<br/>
 							</p>
@@ -132,33 +132,26 @@
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
 									<h2 class="major">Outcomes</h2>
-									<p>40+ papers published in jounrals including Phys. Rev. Lett., J. Chem. Phys., Adv. Funct. Mater., etc.</p>
+									<p>
+										We have published 40+ papers in well-known international journals including Phys. Rev. Lett., J. Chem. Phys., Nat. Sustain., ACS Nano, Adv. Mater., Adv. Funct. Mater., Adv. Opt. Mater., J. Membr. Sci., etc. See the list at <a href=https://scholar.google.com.au/citations?user=Bh8mdUcAAAAJ&hl=en>Google Scholar</a> and <a href=https://www.researchgate.net/profile/Yawei_Liu3>Researchgate</a>.
+									</p>
+									
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Sed feugiat lorem</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<a class="image"><img src="images/nanobubble_pinning.jpg" alt="" /></a>
+											<h4 class="major">Pinning leads to Stable Surface nanobubble</h4>
+											<p>With LDFT calculations, for the first time, we proved that the contact line pinning effect on heterogeous substrates can lead to thermodymaically stable surface nanobubbles.<br/> <a href=http://aip.scitation.org/doi/10.1063/1.4773249>J. Chem. Phys. 2013, 138 (1), 014706.</a></p>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Nisl placerat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<a class="image"><img src="images/nanobubble_pinning02.jpg" alt="" /></a>
+											<h4 class="major">Pinned stable surface nanobubble needs supersatruation</h4>
+											<p>With MD simulations, we confirmed that stabilizing surface nanobubbles require both the contact line pinning and some proper supersaturations.<br/> <a href=https://doi.org/10.1063/1.4896937>J. Chem. Phys. 2014, 141 (13), 134702.</a></p>
 										</article>
 										
 										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Nisl placerat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-
-										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Nisl placerat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<a class="image"><img src="images/marangoni_flow.jpg" alt="" /></a>
+											<h4 class="major">Pressure gradient fails for microscoapic Marangoni flow</h4>
+											<p>With MD simulations, we found that confirmed that microscopic Marangoni flows cannot be predicted based on pressure gradients, while the chemical potential gradient can.<br/> <a href=https://doi.org/10.1103/PhysRevLett.119.224502>Phys. Rev. Lett. 2017, 119 (22), 224502.</a></p>
 										</article>
 
 									</section>
