--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 						<div class="inner">
 							<h2>Menu</h2>
 							<ul class="links">
-								<li><a href="index.html">Home</a></li>
+								<li><a href="#four">Outcomes</a></li>
 							</ul>
-							<a href="#" class="close">Close</a>
+							<a class="close">Close</a>
 						</div>
 					</nav>
 
