--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 						<div class="inner">
 							<h2>Menu</h2>
 							<ul class="links">
-								<li><a href="#four">Outcomes</a></li>
+								<li><a href="#">HOME</a></li>
+								<li><a href="#four">OUTCOME</a></li>
 							</ul>
 							<a class="close">Close</a>
 						</div>
@@ -130,7 +131,7 @@
 						<!-- Four -->
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
-									<h2 class="major">Outcomes</h2>
+									<h2 class="major">Outcome</h2>
 									<p>
 										We have published 40+ papers in well-known international journals including Phys. Rev. Lett., J. Chem. Phys., Nat. Sustain., ACS Nano, Adv. Mater., Adv. Funct. Mater., Adv. Opt. Mater., J. Membr. Sci., etc. See the list at <a href=https://scholar.google.com.au/citations?user=Bh8mdUcAAAAJ&hl=en>Google Scholar</a> and <a href=https://www.researchgate.net/profile/Yawei_Liu3>Researchgate</a>.
 									</p>
