--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 								<div class="inner">
 									<h2 class="major">Outcome</h2>
 									<p>
-										We have published 40+ papers in well-known international journals including Phys. Rev. Lett., J. Chem. Phys., Nat. Sustain., ACS Nano, Adv. Mater., Adv. Funct. Mater., Adv. Opt. Mater., J. Membr. Sci., etc. See the list at <a href=https://scholar.google.com.au/citations?user=Bh8mdUcAAAAJ&hl=en>Google Scholar</a> and <a href=https://www.researchgate.net/profile/Yawei_Liu3>Researchgate</a>.
+										We have published 40+ papers in well-known international journals including Phys. Rev. Lett., J. Chem. Phys., Nat. Sustain., ACS Nano, Adv. Mater., Adv. Funct. Mater., Adv. Opt. Mater., J. Membr. Sci., etc. See the full list at <a href=https://scholar.google.com.au/citations?user=Bh8mdUcAAAAJ&hl=en>Google Scholar</a> and <a href=https://www.researchgate.net/profile/Yawei_Liu3>Researchgate</a>.
 									</p>
 									
 									<section class="features">
