--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 							<ul class="links">
 								<li><a href="#">HOME</a></li>
 								<li><a href="#four">OUTCOME</a></li>
-								<li><a href="#five">LIFE</a></li>
+								<li><a href="#five">FOOTPRINT</a></li>
 								<li><a href="#footer">GET IN TOUCH</a></li>
 							</ul>
 							<a class="close">Close</a>
@@ -206,7 +206,7 @@
 						<!-- Five -->
 						<section id="five" class="wrapper style1">
 							<div class="inner">
-								<h2 class="major">Life</h2>
+								<h2 class="major">Footprint</h2>
 
 								<section>
 									<div class="box alt">
