--- a/index.html
+++ b/index.html
@@ -77,6 +77,27 @@
 								iii) Nano-assembly: Molecule/Nanoparticle interactions and their assembly behaviours in solutions.<br/>
 							</p>
 
+							<p><b>荣誉和奖励 HONOURS and AWARDS</b></p>
+							<p>
+								2017年 北京化工大学优秀博士学位论文<br/>
+								2014年 北京化工大学博士论文创新基金<br/>
+								2014年 北京化工大学中外联合培养基金(赴剑桥大学)<br/>
+								2013年 博士研究生国家奖学金<br/>
+								2013年 北京化工大学“金发科技”奖学金<br/>
+								2012年 硕士研究生国家奖学金<br/>
+								2012年 北京化工大学金发科技社会资助(专项)奖学金<br/>
+							</p>
+
+							<p>
+								2017 Best Doctoral Thesis of Beijing University of Chemical Technology (BUCT)<br/>
+								2014 Innovation Funding for Doctoral Thesis of BUCT<br/>
+								2014 Sino-foreign joint Programs Funding of BUCT (to the University of Cambridge)<br/>
+								2013 National Scholarship for Doctoral Students<br/>
+								2013 "Kingfa Keji" Scholarship of BUCT<br/>
+								2012 National Scholarship for Master Students<br/>
+								2012 “Kingfa Keji” Scholarship of BUCT<br/>
+							</p>
+
 							<p>
 								我们正在开发MolSimulX（分子模拟工具和教程），见<a href=https://gitee.com/yliu3803/MolSimulX>Gitee</a>和<a href=https://github.com/yaweiliu/MolSimulX>Github</a>。<br/>
 
