--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 							<p>
 								2017 Best Doctoral Thesis of Beijing University of Chemical Technology (BUCT)<br/>
 								2014 Innovation Funding for Doctoral Thesis of BUCT<br/>
-								2014 Sino-foreign joint Programs Funding of BUCT (to the University of Cambridge)<br/>
+								2014 Sino-Foreign Joint Programs Funding of BUCT (to the University of Cambridge)<br/>
 								2013 National Scholarship for Doctoral Students<br/>
 								2013 "Kingfa Keji" Scholarship of BUCT<br/>
 								2012 National Scholarship for Master Students<br/>
