--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 							</p>
 
 							<p>
-								2021 “Distinguished Young Scholars” of IPE, ACS<br/>
+								2021 “Distinguished Young Scholars” of IPE, CAS<br/>
 								2017 Best Doctoral Thesis of Beijing University of Chemical Technology (BUCT)<br/>
 								2014 Innovation Funding for Doctoral Thesis of BUCT<br/>
 								2014 Sino-Foreign Joint Programs Funding of BUCT (to the University of Cambridge)<br/>
