--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 								2006.9-2010.6年于北京化工大学开展本科学习，获得工学学士学位(化学工程与工艺)。<br/>
 							</p>
 							<p>
-								I am an Associate Professor at the Institute of Process Engineering of Chinese Academy of Sciences (IPE, CAS) since 2021.11. Prior to this I was a Postdoc researcher at the University of Sydney during 2017.9-2021.8 (<a href=https://www.sydney.edu.au/science/about/our-people/academic-staff/asaph-widmer-cooper.html>A/Prof. Asaph Widmer-Cooper's group</a>), a visiting PhD student at the University of Cambridge during 2014.11-2016.11 (<a href=https://www.ch.cam.ac.uk/person/df246>Prof. Daan Frenkel's group</a>), a Master/PhD student at Beijing University of Chemical Technology (BUCT) during 2010.9-2017.7 (<a href=https://www.researchgate.net/profile/Xianren-Zhang>Prof. Xianren Zhang's group</a>), and a undergraduate student at BUCT during 2006.9-2010.6.
+								I am an Associate Professor at the Institute of Process Engineering of Chinese Academy of Sciences (IPE, CAS) since 2021.11. Prior to this I was a Postdoc researcher at the University of Sydney during 2017.9-2021.8 (<a href=https://www.sydney.edu.au/science/about/our-people/academic-staff/asaph-widmer-cooper.html>A/Prof. Asaph Widmer-Cooper's group</a>), a visiting PhD student at the University of Cambridge during 2014.11-2016.11 (<a href=https://www.ch.cam.ac.uk/person/df246>Prof. Daan Frenkel's group</a>), a Master/PhD student at Beijing University of Chemical Technology (BUCT) during 2010.9-2017.7 (<a href=https://www.researchgate.net/profile/Xianren-Zhang>Prof. Xianren Zhang's group</a>), and an undergraduate student at BUCT during 2006.9-2010.6.
 								<br/>
 							</p>	
 
