--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 							<p>
 								2021.11月加入中国科学院过程工程研究所离子液体与低碳能源研究部，任(项目)研究员，博导。<br/>
 								2017.9-2021.8在澳大利亚悉尼大学<a href=https://www.sydney.edu.au/science/about/our-people/academic-staff/asaph-widmer-cooper.html>Asaph Widmer-Cooper副教授课题组</a>开展博士后研究工作。<br/>
-								2014.11-2016.11在英国剑桥大学化学系<a href=https://www.ch.cam.ac.uk/person/df246>Daan Frenkel教授课题</a>组联合培养学习。<br/>
+								2014.11-2016.11在英国剑桥大学化学系<a href=https://www.ch.cam.ac.uk/person/df246>Daan Frenkel教授课题组</a>联合培养学习。<br/>
 								2010.9-2017.6年在北京化工大学<a href=https://www.researchgate.net/profile/Xianren-Zhang>张现仁教授课题组</a>开展硕士/博士学习，获工学博士学位(化学工程与技术)。<br/>
 								2006.9-2010.6年于北京化工大学开展本科学习，获得工学学士学位(化学工程与工艺)。<br/>
 							</p>
