--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
 							<p><b>荣誉和奖励 HONOURS and AWARDS</b></p>
 							<p>
-								2021年 中科院过程所“过程杰青”<br/>
+								2021年 中科院过程所“引才计划”<br/>
 								2017年 北京化工大学优秀博士学位论文<br/>
 								2014年 北京化工大学博士论文创新基金<br/>
 								2014年 北京化工大学中外联合培养基金(赴剑桥大学)<br/>
@@ -96,7 +96,7 @@
 							</p>
 
 							<p>
-								2021 “Distinguished Young Scholars” of IPE, CAS<br/>
+								2021 “Talents Programme” of IPE, CAS<br/>
 								2017 Best Doctoral Thesis of Beijing University of Chemical Technology (BUCT)<br/>
 								2014 Innovation Funding for Doctoral Thesis of BUCT<br/>
 								2014 Sino-Foreign Joint Programs Funding of BUCT (to the University of Cambridge)<br/>
