--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="#">HOME</a></li>
-								<li><a href="#four">OUTCOME</a></li>
-								<li><a href="#five">FOOTPRINT</a></li>
+								<li><a href="./publication_list.html">PUBLICATION LIST</a></li>
+								<li><a href="#four">SELECTED OUTCOMES</a></li>
+								<li><a href="#five">FOOTPRINTS</a></li>
 								<li><a href="#footer">GET IN TOUCH</a></li>
 							</ul>
 							<a class="close">Close</a>
@@ -45,7 +46,10 @@
 						<div class="inner">
 							<div class="logo"><span class="icon fa-gem"></span></div>
 							<h2>刘亚伟 Dr Yawei Liu</h2>
-							<p><b>中国科学院过程工程研究所 (项目)研究员 博导 Associate Professor at IPE of CAS</b></p>
+							<p>
+								<b>中国科学院过程工程研究所 (项目)研究员 博导 Associate Professor at IPE of CAS</b>
+							</p>
+
 							<p>
 								2021.11月加入中国科学院过程工程研究所离子液体与低碳能源研究部，任(项目)研究员，博导。<br/>
 								2017.9-2021.8在澳大利亚悉尼大学<a href=https://www.sydney.edu.au/science/about/our-people/academic-staff/asaph-widmer-cooper.html>Asaph Widmer-Cooper副教授课题组</a>开展博士后研究工作。<br/>
@@ -60,6 +64,11 @@
 
 							
 							<p><b>研究方向 Research interests</b></p>
+							<p>
+								<a href=./publication_list.html>文章列表</a> 
+								<a href=./publication_list.html>Publication list</a>
+							</p>
+
 							<p>
 								我们开发和应用多尺度分析和计算方法（以分子模拟为主），从分子水平和纳米尺度来研究软物质，即通过相对较弱的非共价相互作用聚集在一起的物质，如液体、液晶、聚合物、凝胶、胶体、表面活性剂、膜、生物材料（如DNA、蛋白质、脂质等）以及它们的复合物质。这些研究可以促进我们对物质组成-结构-性质-功能的基本理解，支撑健康、环境、能源等领域新型材料和工艺的设计和开发。为了激发这些工作并支撑真实系统的研究，我们经常与实验研究者密切合作。<br/>
 								我们特别关注软物质体系表界面微观结构对流体/颗粒行为的影响和调控，主要研究课题包括：<br/>
