--- a/publication_list.html
+++ b/publication_list.html
@@ -355,7 +355,7 @@ kbd {
 
 <h3 id="toc_11"><strong><span style="color:#2da266">2021</span></strong></h3>
 
-<h5 id="toc_12">35. <span style="color:#00bfff">Liu, Y.</span>; Widmer-Cooper, A. A Dissipative Particle Dynamics Model for Studying Dynamic Phenomena in Colloidal Rod Suspensions. <a href="https://doi.org/10.1063/5.0041285">J. Chem. Phys. 2021, 154 (10), 104120</a>.</h5>
+<h5 id="toc_12">35. <span style="color:#00bfff">Liu, Y.</span>; Widmer-Cooper, A. A Dissipative Particle Dynamics Model for Studying Dynamic Phenomena in Colloidal Rod Suspensions. <a href="https://doi.org/10.1063/5.0041285">J. Chem. Phys. 2021, 154 (10), 104120</a>. <span style="color:#d56500">(Editor&#39;s Pick)</span></h5>
 
 <h5 id="toc_13">34. Wood, J. A.; <span style="color:#00bfff">Liu, Y.</span>; Widmer-Cooper, A. Crystal Nucleation in Colloidal Rod Suspensions: The Effect of Depletant Size. <a href="https://doi.org/10.1063/5.0052623">J. Chem. Phys. 2021, 154 (24), 244505</a>.</h5>
 
