--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 							<ul class="links">
 								<li><a href="#">HOME</a></li>
 								<li><a href="./publication_list.html">PUBLICATION LIST</a></li>
+								<li><a href="./conferences_talks.html">CONFERENCES & TALKS</a></li>
 								<li><a href="#four">SELECTED OUTCOMES</a></li>
 								<li><a href="#five">FOOTPRINTS</a></li>
 								<li><a href="#footer">GET IN TOUCH</a></li>
@@ -161,9 +162,14 @@
 								<div class="inner">
 									<h2 class="major">Selected Outcomes</h2>
 									<p>
-										<a href=./publication_list.html>文章列表</a> 
-										<a href=./publication_list.html>Publication list</a>
+										<a href=./publication_list.html>文章/专著</a> 
+										<a href=./publication_list.html>Publications/Books</a>
+										<br/>
+										<a href=./conferences_talks.html>会议/报告</a> 
+										<a href=./conferences_talks.html>Conferences/Talks</a>
 									</p>
+
+									
 
 									<p>
 										研究成果在Phys. Rev. Lett., J. Chem. Phys., Nat. Sustain., ACS Nano, Adv. Mater., Adv. Funct. Mater., Adv. Opt. Mater., J. Membr. Sci.等杂志发表SCI论文40余篇，详见<a href=https://scholar.google.com.au/citations?user=Bh8mdUcAAAAJ&hl=en>Google Scholar</a>和<a href=https://www.researchgate.net/profile/Yawei_Liu3>Researchgate</a>.
