--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="#">HOME</a></li>
-								<li><a href="./publication_list.html">PUBLICATION LIST</a></li>
+								<li><a href="./publication_list.html">PUBLICATIONS & BOOKS</a></li>
 								<li><a href="./conferences_talks.html">CONFERENCES & TALKS</a></li>
 								<li><a href="#four">SELECTED OUTCOMES</a></li>
 								<li><a href="#five">FOOTPRINTS</a></li>
