--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="#">HOME</a></li>
-								<li><a href="./publication_list.html">PUBLICATIONS & BOOKS</a></li>
+								<li><a href="./publications_books.html">PUBLICATIONS & BOOKS</a></li>
 								<li><a href="./conferences_talks.html">CONFERENCES & TALKS</a></li>
 								<li><a href="#four">SELECTED OUTCOMES</a></li>
 								<li><a href="#five">FOOTPRINTS</a></li>
@@ -162,8 +162,8 @@
 								<div class="inner">
 									<h2 class="major">Selected Outcomes</h2>
 									<p>
-										<a href=./publication_list.html>文章/专著</a> 
-										<a href=./publication_list.html>Publications/Books</a>
+										<a href=./publications_books.html>文章/专著</a> 
+										<a href=./publications_books.html>Publications/Books</a>
 										<br/>
 										<a href=./conferences_talks.html>会议/报告</a> 
 										<a href=./conferences_talks.html>Conferences/Talks</a>
