--- a/conferences_talks.html
+++ b/conferences_talks.html
@@ -355,7 +355,7 @@ kbd {
 
 <h5 id="toc_11">11. Dynamic Simulations of Rod-Shaped Colloidal Particles: Phase behaviour, self-assembly, diffusion and electrophoresis. <span style="color:#b80000">Oral</span> – Statistical Mechanics of Soft Matter (SM2) 2019, <span style="color:#00bfff">Adelaide, Australia</span>, Dec. 16-17, 2019.</h5>
 
-<h5 id="toc_12">10. Modelling Electrophoresis of Rod-shaped Colloidal Particles. <span style="color:#b80000">Invited Talk</span> – Prof. P. Mulvaney’s group, University of Melbourne, Melbourne, Australia, Oct. 7, 2019.</h5>
+<h5 id="toc_12">10. Modelling Electrophoresis of Rod-shaped Colloidal Particles. <span style="color:#b80000">Invited Talk</span> – Prof. P. Mulvaney’s group, University of Melbourne, <span style="color:#00bfff">Melbourne, Australia</span>, Oct. 7, 2019.</h5>
 
 <h5 id="toc_13">9. Stability and formation of surface nanobubbles: a computer simulation study. <span style="color:#b80000">Poster</span> – 9th Australian Colloid and Interface Symposium, <span style="color:#00bfff">Hobart, Tasmania, Australia</span>, Feb. 3-7, 2019.</h5>
 
