--- a/publications_books.html
+++ b/publications_books.html
@@ -5,7 +5,7 @@
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-<title>publication_list</title>
+<title>publications_books</title>
 
 
 <style type="text/css">
@@ -333,7 +333,7 @@ kbd {
 
 <h4 id="toc_0"><a href="./index.html">HOME</a></h4>
 
-<h1 id="toc_1">Publication List</h1>
+<h1 id="toc_1">Publications and Books</h1>
 
 <h3 id="toc_2"><strong><span style="color:#2da266">2022</span></strong></h3>
 
