--- a/conferences_talks.html
+++ b/conferences_talks.html
@@ -373,7 +373,7 @@ kbd {
 
 <h3 id="toc_20"><strong><span style="color:#2da266">2015</span></strong></h3>
 
-<h5 id="toc_21">4. Stability of Surface Nanobubbles. <span style="color:#b80000">Invited Talk</span> – Prof. Detlef Lohse, University of Twente, Enschede, Netherlands, Jan. 26, 2015.</h5>
+<h5 id="toc_21">4. Stability of Surface Nanobubbles. <span style="color:#b80000">Invited Talk</span> – Prof. Detlef Lohse, University of Twente, <span style="color:#00bfff">Enschede, Netherlands</span>, Jan. 26, 2015.</h5>
 
 <h3 id="toc_22"><strong><span style="color:#2da266">2013-2012</span></strong></h3>
 
